--- a/src/index.scss
+++ b/src/index.scss
@@ -8,11 +8,12 @@
 }
 
 :root {
-  --family: 'SF Pro Display', sans-serif;;
+  --family: 'SF Pro Display', sans-serif;
 }
 
 body {
-  background: var(--tg-theme-section-bg-color, white);
+  background: var(--tg-theme-secondary-bg-color, white);
+  padding: 20px 16px !important;
 }
 
 .state-container {
