--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  background: var(--tg-theme-section-bg-color, white);
+  background: var(--tg-theme-secondary-bg-color,var(--secondary-bg-color-fallback));
   padding: 20px 16px !important;
 }
 
