--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  background: var(--tg-theme-secondary-bg-color);
+  background: var(--tg-theme-secondary-bg-color), white;
   padding: 20px 16px !important;
 }
 
