--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,11 @@ body {
   padding: 20px 16px !important;
 }
 
+.app-shell {
+  min-height: 100%;
+  background: transparent; 
+}
+
 .state-container {
   display: flex;
   align-items: center;
