--- a/src/components/StakeSection/StakeSection.module.scss
+++ b/src/components/StakeSection/StakeSection.module.scss
@@ -1,7 +1,7 @@
 .stakeSection {
     width: 100%;
     padding: 14px;
-    background: var(--tg-theme-section-bg-color);
+    background: var(--app-section-bg);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
