--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: var(--white);
+  color: var(--app-text);
   user-select: none;
   font-family: 'SF Pro Display', sans-serif !important;
 }
