--- a/src/components/StakeSection/StakeSection.module.scss
+++ b/src/components/StakeSection/StakeSection.module.scss
@@ -71,7 +71,8 @@
         margin-top: 4px;
 
         button {
-            width: 100%;
+            flex: 0 0 50%;
+            max-width: 50%;
             border-radius: 12px;
         }
     }
