--- a/src/components/LoaderScreen/LoaderScreen.module.scss
+++ b/src/components/LoaderScreen/LoaderScreen.module.scss
@@ -14,6 +14,7 @@
         background: var(--app-button);
         display: flex;
         position: relative;
+        margin-top: -20px;
         align-items: center;
         justify-content: center;
 
