--- a/src/pages/PaymentInitPage/PaymentInitPage.module.scss
+++ b/src/pages/PaymentInitPage/PaymentInitPage.module.scss
@@ -1,6 +1,6 @@
 .paymentInitLayout {
     width: 100%;
-    height: 100vh;
+    height: calc(var(--tg-viewport-height) - 30px);
     overflow: hidden;
     display: flex;
     align-items: center;
