--- a/src/components/ApyPreview/ApyPreview.module.scss
+++ b/src/components/ApyPreview/ApyPreview.module.scss
@@ -149,11 +149,12 @@
         .apyTitle {
             font-size: 14.5px !important;
             font-family: 'SF Pro Rounded' !important;
+            font-weight: bold !important;
+            -webkit-text-stroke: 0.05px var(--app-green);
             border-radius: 6px;
             padding: 2px 4px;
             color: var(--app-green);
             background: rgba(34, 197, 94, 0.12);
-            font-weight: 700 !important;
         }
       }
   }
