--- a/src/pages/PaymentInitPage/PaymentInitPage.module.scss
+++ b/src/pages/PaymentInitPage/PaymentInitPage.module.scss
@@ -5,6 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overscroll-behavior: none;
+    touch-action: none;
     flex-direction: column;
     gap: 5px;
 }
