--- a/src/pages/PaymentSuccess/PaymentSuccessPage.module.scss
+++ b/src/pages/PaymentSuccess/PaymentSuccessPage.module.scss
@@ -88,6 +88,7 @@
     .apyTitle {
       font-size: 14.5px !important;
       font-family: 'SF Pro Rounded' !important;
+      -webkit-text-stroke: 0.03px var(--app-green);
       border-radius: 6px;
       padding: 2px 4px;
       color: var(--app-green);
