--- a/src/components/UnsupportedPlatform/UnsupportedPlatform.module.scss
+++ b/src/components/UnsupportedPlatform/UnsupportedPlatform.module.scss
@@ -1,31 +1,24 @@
 .unsupportedLayout {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--bg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
   text-align: center;
+  gap: 12px;
+}
 
-  img {
-      width: 65px;
-      height: 65px;
-  }
+.qrWrapper {
+  position: relative;
+  display: inline-block;
+}
 
-  .title {
-    font-size: 18px;
-    font-weight: 700;
-    margin: 12px 0;
-  }
-
-  .subtitle {
-    font-size: 15px;
-    color: var(--white);
-    max-width: 84%;
-  }
+.qrLogo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px; 
+  height: 40px;
+  border-radius: 10px; 
+  transform: translate(-50%, -50%);
+  object-fit: cover;
 }
