--- a/src/components/UnsupportedPlatform/UnsupportedPlatform.module.scss
+++ b/src/components/UnsupportedPlatform/UnsupportedPlatform.module.scss
@@ -2,9 +2,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  background: var(--tgui--bg_color);
+  width: 100%;
   justify-content: center;
   text-align: center;
   gap: 12px;
+
+  .content {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 4px;
+
+     h1 {
+      font-size: 23px;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    p {
+      font-size: 15px;
+      text-align: center;
+    }
+  }
 }
 
 .qrWrapper {
@@ -18,7 +42,7 @@
   left: 50%;
   width: 40px; 
   height: 40px;
-  border-radius: 10px; 
+  border-radius: 6px; 
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
