--- a/src/components/StakeSection/StakeSection.module.scss
+++ b/src/components/StakeSection/StakeSection.module.scss
@@ -126,6 +126,7 @@
         button {
             flex: 1;
             height: 47px;
+            border-radius: 130px;
             width: 50%;
 
             h6 {
