--- a/src/pages/DepositPage/DepositPage.module.scss
+++ b/src/pages/DepositPage/DepositPage.module.scss
@@ -125,6 +125,7 @@
       .usdNote {
         font-family: 'SF Pro Rounded' !important;
         font-weight: bold !important;
+        -webkit-text-stroke: 0.03px var(--app-hint);
         display: flex;
         align-items: center;
         justify-content: center;
