--- a/src/components/ApyPreview/ApyPreview.module.scss
+++ b/src/components/ApyPreview/ApyPreview.module.scss
@@ -27,6 +27,7 @@
     .label {
       font-family: 'SF Pro Rounded' !important;
       font-size: 16px;
+      -webkit-text-stroke: 0.02px var(--app-text);
       font-weight: 700 !important;
     }
 
@@ -119,13 +120,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 12px;
+        gap: 8px;
         min-height: 24px;
 
         .itemLabel {
           color: var(--app-hint);
           font-size: 15px;
           font-weight: 700;
+          -webkit-text-stroke: 0.02px var(--app-hint);
           font-family: 'SF Pro Rounded' !important;
           white-space: nowrap;
         }
