--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -4,6 +4,7 @@
   background-color: var(--tgui--bg_color);
   border-radius: 18px;
   z-index: 1000;
+  width: max-content;
   min-width: 160px;
   padding: 8px 0;
   background: color-mix(in oklab, var(--app-section-bg) 78%, transparent);
