Fixed history section

--- a/src/index.scss
+++ b/src/index.scss
@@ -138,6 +138,10 @@ body.modal-open {
   color: var(--app-text);
 }
 
+.white-icon {
+  color: #FFFF;
+}
+
 .destructive-icon {
   color: var(--app-destructive-text);
 }
