--- a/src/components/LoaderScreen/LoaderScreen.module.scss
+++ b/src/components/LoaderScreen/LoaderScreen.module.scss
@@ -6,6 +6,7 @@
     background: var(--app-secondary-bg);
     align-items: center;
     justify-content: center;
+    padding-bottom: 20px;
 
     .iconWrapper {
         width: 110px;
