--- a/src/components/StatsSection/StatsSection.module.scss
+++ b/src/components/StatsSection/StatsSection.module.scss
@@ -42,9 +42,21 @@
                 justify-content: flex-start;
                 gap: 6px;
 
-                svg {
+                .starIcon {
                     width: 24px;
                     height: 24px;
+                }
+                
+                .inlineValue {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    gap: 4px;
+
+                    svg {
+                        width: 16px;
+                        height: 16px;
+                    }
                 }
 
                 .positiveStatus {
