--- a/src/components/HistoryItem/HistoryItem.module.scss
+++ b/src/components/HistoryItem/HistoryItem.module.scss
@@ -40,7 +40,7 @@
     .rowTop {
       .type {
         font-family: 'SF Pro Rounded' !important;
-        font-weight: bold !important;
+        font-weight: 600 !important;
         font-size: 17px;
         line-height: 1.1;
         white-space: nowrap;
@@ -54,7 +54,7 @@
         display: flex;
         justify-content: flex-end;
         font-family: 'SF Pro Rounded' !important;
-        font-weight: bold !important;
+        font-weight: 600 !important;
         align-items: flex-start;
         gap: 4px;
 
