--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -26,8 +26,7 @@
       padding: 10px 0;
       font-size: 15px;
       font-family: 'SF Pro Rounded' !important;
-      font-weight: bold !important;
-      -webkit-text-stroke: 0.05px var(--app-text);
+      font-weight: 500 !important;
       text-align: right;
       vertical-align: middle;
 
