--- a/src/pages/PaymentSuccess/PaymentSuccessPage.module.scss
+++ b/src/pages/PaymentSuccess/PaymentSuccessPage.module.scss
@@ -64,8 +64,7 @@
       font-size: 15px;
       color: var(--app-hint);
       font-family: 'SF Pro Rounded' !important;
-      font-weight: bold !important;
-      -webkit-text-stroke: 0.05px var(--app-hint);
+      font-weight: 500 !important;
       white-space: nowrap;
     }
 
@@ -75,8 +74,7 @@
       gap: 4px;
       font-size: 15px;
       font-family: 'SF Pro Rounded' !important;
-      font-weight: bold !important;
-      -webkit-text-stroke: 0.05px var(--app-text);
+      font-weight: 500 !important;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -88,7 +86,6 @@
     .apyTitle {
       font-size: 14.5px !important;
       font-family: 'SF Pro Rounded' !important;
-      -webkit-text-stroke: 0.03px var(--app-green);
       border-radius: 6px;
       padding: 2px 4px;
       color: var(--app-green);
