--- a/src/pages/PaymentInitPage/PaymentInitPage.module.scss
+++ b/src/pages/PaymentInitPage/PaymentInitPage.module.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     overscroll-behavior: none;
     touch-action: none;
+    padding-bottom: 30px;
     flex-direction: column;
     gap: 5px;
 
